# pq-dr

./: .gitignore  AUDIT_CHECKLIST.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HACKER_NEWS_POST.md  INTEGRATION.md  MONETIZATION_PLANS.md  PAYMENTS.md  PRD.md  README.md  SECURITY.md  THREAT_MODEL.md  app.js  deny.toml  errors.txt  index.html  style.css
.cargo/: audit.toml
.github/workflows/: benchmarks.yml  ci.yml  fuzz.yml  static.yml
benches/: crypto_bench.rs  ratchet_bench.rs
ecosystem_wrappers/android/: PqAuraNative.kt
ecosystem_wrappers/ios/: PqAuraBridge.h  PqAuraClient.swift
ecosystem_wrappers/react-native/: PqAuraModule.js
examples/: basic_usage.rs  handshake.rs  ratchet_chat.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decapsulate_fuzz.rs  decrypt_fuzz.rs  handshake_fuzz.rs  header_fuzz.rs  serialize_fuzz.rs
include/: pq_aura.h
pq_aura_flutter/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
pq_aura_flutter/.dart_tool/: package_config.json  package_graph.json
pq_aura_flutter/lib/: pq_aura_flutter.dart
pq_aura_flutter/lib/src/: ffi_bindings.dart  pq_aura_client.dart  pq_aura_types.dart
server/: Cargo.toml
server/src/: main.rs
src/: crypto.rs  error.rs  ffi.rs  handshake.rs  jni.rs  lib.rs  ratchet.rs  state.rs  wasm.rs
tests/: crypto_tests.rs  handshake_tests.rs  protocol_tests.rs
website/: app.js  index.html  privacy.html  terms.html
