[package]
name = "pq-aura"
version = "0.1.0"
edition = "2021"
authors = ["Shreyas Sengupta"]
description = "A Hybrid Post-Quantum Double Ratchet library"

[dependencies]
# Quantum-resistant KEM (FIPS 203)
ml-kem = "0.2"

# Classical Diffie-Hellman
x25519-dalek = { version = "2.0", features = ["serde", "static_secrets"] }

# Symmetric Cipher (Nonce-misuse resistant)
aes-gcm-siv = "0.11"

# Hashing and KDF
blake3 = { version = "1.5", features = ["zeroize"] }
hkdf = "0.12"

# Security Hardening
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web Support
wasm-bindgen = "0.2"

# Randomness
rand = "0.8"
rand_core = "0.6"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
proptest = "1.4"
tokio = { version = "1.0", features = ["full"] }

[lib]
name = "pq_aura"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]
