[package]
name = "pq-aura-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
dotenvy = "0.15"
pq-aura = { path = ".." }

# Payment verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# HTTP client (for Resend email API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Unique IDs for license keys and order IDs
uuid = { version = "1.8", features = ["v4"] }

# Timestamps for invoices
chrono = { version = "0.4", features = ["serde"] }
